Ensure cell is aligned in IE

--- a/src/components/table/table.css
+++ b/src/components/table/table.css
@@ -40,6 +40,7 @@
 .headerCell {
   composes: cell;
   font-size: var(--mavenlink-type-small-size);
+  text-align: left;
   vertical-align: bottom;
   color: var(--palette-grey-dark);
 }
